[package]
name = "egui-macroquad"
version = "0.17.0"
authors = ["Ilya Sheprut <optozorax@gmail.com>"]
edition = "2021"
license = "MIT/Apache-2.0"

[dependencies]
egui = "0.30.0"
macroquad = { version = "0.4.13", default-features = false }
egui-miniquad = { git = 'https://github.com/yui-915/egui-miniquad' }

[features]
default = ["audio"]
audio = ["macroquad/audio"]
